--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
   dio: ^4.0.6
+  animated_snack_bar: ^0.3.0
 
 dev_dependencies:
   flutter_test:
